tests/negative/regression/r25.orng
// r25.orng:7:40: error: cannot access non-const variable `ident` from an inner-function
// fn (ident: Int) -> fn() -> (while ident {}) { } { 
//                                       ^
// 
fn main() -> Int { } 

fn (ident: Int) -> fn() -> (while ident {}) { } { 
    
} 
